Simplify link selectors to avoid bleed
The link selectors were changed to apply a default border style to all
anchors (with a loose selector, just 'a') but leave that border-color
transparent.  All of these elements get a :hover to apply the primary
hover style.

Any anchor that's in wp-block or entry-content will instead have those
border color values inverted (defaults to --color-primary, hover is
transparent)

Buttons, social links (any other <a> that I found to evaluate) had more
specific selection rules to eliminate the border-bottom styles
preventing undesired underlines.

--- a/spearhead/assets/sass/_text.scss
+++ b/spearhead/assets/sass/_text.scss
@@ -1,19 +1,19 @@
 .has-link-color a, a {
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid;
+    border-color: transparent;
     transition: all 0.1s ease;
 
-    &:hover:not(.wp-block-button__link):not(.wp-block-file__button) {
+    &:hover {
         color: var( --global--color-primary-hover );
-        border-bottom: 1px solid var( --global--color-primary-hover );
+        border-color: var( --global--color-primary-hover );
     }
 }
 
-.wp-block a, // Target the editor link styles also.
+.wp-block a,
 .entry-content a {
     font-weight: var(--global--link-font-weight);
-    border-color: var( --global--color-primary ); // Links inside the post content must be underlined.
-
-    &:hover:not(.wp-block-button__link) {
+    border-color: var( --global--color-primary );
+    &:hover {
         border-color: transparent;
     }
 }
